2010-02-01  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Eric Seidel.

        [BREWMP] Port WTF's currentTime
        https://bugs.webkit.org/show_bug.cgi?id=33567

        Combine GETUTCSECONDS and GETTIMEMS to calculate the number
        of milliseconds since 1970/01/01 00:00:00 UTC.

        * wtf/CurrentTime.cpp:
        (WTF::currentTime):

2010-02-01  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Darin Adler.

        [Qt] WinCE buildfix after r52729 and fix for Q_BIG_ENDIAN typo.
        https://bugs.webkit.org/show_bug.cgi?id=34378

        * wtf/Platform.h:

2010-02-01  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Structure not accounting for anonymous slots when computing property storage size
        https://bugs.webkit.org/show_bug.cgi?id=34441

        Previously any Structure with anonymous storage would have a property map, so we
        were only including anonymous slot size if there was a property map.  Given this
        is no longer the case we should always include the anonymous slot count in the
        property storage size.

        * runtime/Structure.h:
        (JSC::Structure::propertyStorageSize):

2010-02-01  Oliver Hunt  <oliver@apple.com>

        Windows build fix, update exports file (again)

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2010-02-01  Oliver Hunt  <oliver@apple.com>

        Windows build fix, update exports file

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2010-01-31  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.

        JSC is failing to propagate anonymous slot count on some transitions
        https://bugs.webkit.org/show_bug.cgi?id=34321

        Remove secondary Structure constructor, and make Structure store a copy
        of the number of anonymous slots directly so saving an immediate allocation